@@ -1,5 +1,5 @@
 /*
- * $Id: LongRangeValidator.java,v 1.43 2005/12/05 16:43:03 edburns Exp $
+ * $Id: LongRangeValidator.java,v 1.44 2006/12/15 17:44:44 rlubke Exp $
  */
 
 /*
@@ -43,26 +43,26 @@ import javax.faces.convert.Converter;
  * <ul>
  * <li>If the passed value is <code>null</code>, exit immediately.</li>
  * <li>If the current component value is not a floating point type, or
- *     a String that is convertible to long,
- *      throw a {@link ValidatorException} containing a
- *     TYPE_MESSAGE_ID message.</li>
+ * a String that is convertible to long,
+ * throw a {@link ValidatorException} containing a
+ * TYPE_MESSAGE_ID message.</li>
  * <li>If both a <code>maximum</code> and <code>minimum</code> property
- *     has been configured on this {@link Validator}, check the component
- *     value against both limits.  If the component value is not within
- *     this specified range, throw a {@link ValidatorException} containing a
- *     {@link #NOT_IN_RANGE_MESSAGE_ID} message.</li>
+ * has been configured on this {@link Validator}, check the component
+ * value against both limits.  If the component value is not within
+ * this specified range, throw a {@link ValidatorException} containing a
+ * {@link #NOT_IN_RANGE_MESSAGE_ID} message.</li>
  * <li>If a <code>maximum</code> property has been configured on this
- *     {@link Validator}, check the component value against
- *     this limit.  If the component value is greater than the
- *     specified maximum, throw a {@link ValidatorException} containing a
- *     MAXIMUM_MESSAGE_ID message.</li>
+ * {@link Validator}, check the component value against
+ * this limit.  If the component value is greater than the
+ * specified maximum, throw a {@link ValidatorException} containing a
+ * MAXIMUM_MESSAGE_ID message.</li>
  * <li>If a <code>minimum</code> property has been configured on this
- *     {@link Validator}, check the component value against
- *     this limit.  If the component value is less than the
- *     specified minimum, throw a {@link ValidatorException} containing a
- *     MINIMUM_MESSAGE_ID message.</li>
+ * {@link Validator}, check the component value against
+ * this limit.  If the component value is less than the
+ * specified minimum, throw a {@link ValidatorException} containing a
+ * MINIMUM_MESSAGE_ID message.</li>
  * </ul>
- * 
+ * <p/>
  * <p>For all of the above cases that cause a {@link ValidatorException}
  * to be thrown, if there are parameters to the message that match up
  * with validator parameters, the values of these parameters must be
@@ -73,7 +73,6 @@ import javax.faces.convert.Converter;
  */
 
 public class LongRangeValidator implements Validator, StateHolder {
-
 
     // ------------------------------------------------------ Manifest Constants
 
@@ -86,16 +85,16 @@ public class LongRangeValidator implements Validator, StateHolder {
 
     /**
      * <p>The message identifier of the {@link javax.faces.application.FacesMessage} to be created if
-     * the maximum value check fails.  The message format string for 
+     * the maximum value check fails.  The message format string for
      * this message may optionally include the following placeholders:
      * <ul>
      * <li><code>{0}</code> replaced by the configured maximum value.</li>
      * <li><code>{1}</code> replaced by a <code>String</code> whose value
-     *   is the label of the input component that produced this message.</li>
+     * is the label of the input component that produced this message.</li>
      * </ul></p>
      */
     public static final String MAXIMUM_MESSAGE_ID =
-        "javax.faces.validator.LongRangeValidator.MAXIMUM";
+         "javax.faces.validator.LongRangeValidator.MAXIMUM";
 
 
     /**
@@ -105,11 +104,11 @@ public class LongRangeValidator implements Validator, StateHolder {
      * <ul>
      * <li><code>{0}</code> replaced by the configured minimum value.</li>
      * <li><code>{1}</code> replaced by a <code>String</code> whose value
-     *   is the label of the input component that produced this message.</li>
+     * is the label of the input component that produced this message.</li>
      * </ul></p>
      */
     public static final String MINIMUM_MESSAGE_ID =
-        "javax.faces.validator.LongRangeValidator.MINIMUM";
+         "javax.faces.validator.LongRangeValidator.MINIMUM";
 
     /**
      * <p>The message identifier of the {@link javax.faces.application.FacesMessage} to be created if
@@ -121,11 +120,11 @@ public class LongRangeValidator implements Validator, StateHolder {
      * <li><code>{0}</code> replaced by the configured minimum value.</li>
      * <li><code>{1}</code> replaced by the configured maximum value.</li>
      * <li><code>{2}</code> replaced by a <code>String</code> whose value
-     *   is the label of the input component that produced this message.</li>
+     * is the label of the input component that produced this message.</li>
      * </ul></p>
      */
     public static final String NOT_IN_RANGE_MESSAGE_ID =
-        "javax.faces.validator.LongRangeValidator.NOT_IN_RANGE";
+         "javax.faces.validator.LongRangeValidator.NOT_IN_RANGE";
 
     /**
      * <p>The message identifier of the {@link javax.faces.application.FacesMessage} to be created if
@@ -136,8 +135,7 @@ public class LongRangeValidator implements Validator, StateHolder {
      * the input component that produced this message.</p>
      */
     public static final String TYPE_MESSAGE_ID =
-        "javax.faces.validator.LongRangeValidator.TYPE";
-
+         "javax.faces.validator.LongRangeValidator.TYPE";
 
     // ------------------------------------------------------------ Constructors
 
@@ -172,7 +170,6 @@ public class LongRangeValidator implements Validator, StateHolder {
      *
      * @param maximum Maximum value to allow
      * @param minimum Minimum value to allow
-     *
      */
     public LongRangeValidator(long maximum, long minimum) {
 
@@ -181,7 +178,6 @@ public class LongRangeValidator implements Validator, StateHolder {
         setMinimum(minimum);
 
     }
-
 
     // -------------------------------------------------------------- Properties
 
@@ -204,7 +200,6 @@ public class LongRangeValidator implements Validator, StateHolder {
      * <p>Set the maximum value to be enforced by this {@link Validator}.</p>
      *
      * @param maximum The new maximum value
-     *
      */
     public void setMaximum(long maximum) {
 
@@ -232,7 +227,6 @@ public class LongRangeValidator implements Validator, StateHolder {
      * <p>Set the minimum value to be enforced by this {@link Validator}.</p>
      *
      * @param minimum The new minimum value
-     *
      */
     public void setMinimum(long minimum) {
 
@@ -241,16 +235,15 @@ public class LongRangeValidator implements Validator, StateHolder {
 
     }
 
-
     // ------------------------------------------------------- Validator Methods
 
     /**
-     * @throws NullPointerException {@inheritDoc}     
-     * @throws ValidatorException {@inheritDoc}     
-     */ 
+     * @throws NullPointerException {@inheritDoc}
+     * @throws ValidatorException   {@inheritDoc}
+     */
     public void validate(FacesContext context,
-                         UIComponent  component,
-                         Object       value) throws ValidatorException {
+                         UIComponent component,
+                         Object value) throws ValidatorException {
 
         if ((context == null) || (component == null)) {
             throw new NullPointerException();
@@ -259,57 +252,55 @@ public class LongRangeValidator implements Validator, StateHolder {
             try {
                 long converted = longValue(value);
                 if (maximumSet &&
-                    (converted > maximum)) {
-		    if (minimumSet) {
+                     (converted > maximum)) {
+                    if (minimumSet) {
                         throw new ValidatorException(MessageFactory.getMessage
-					   (context,
-					    NOT_IN_RANGE_MESSAGE_ID,
-					    new Object[] {
-					    stringValue(component,
-							new Long(minimum)),
-					    stringValue(component,
-							new Long(maximum)),
-                                             MessageFactory.getLabel(context, component)}));
-			
-		    }
-		    else {
+                             (context,
+                                  NOT_IN_RANGE_MESSAGE_ID,
+                                  new Object[]{
+                                       stringValue(component,
+                                            new Long(minimum)),
+                                       stringValue(component,
+                                            new Long(maximum)),
+                                       MessageFactory.getLabel(context, component)}));
+
+                    } else {
                         throw new ValidatorException(MessageFactory.getMessage
-					   (context,
-					    MAXIMUM_MESSAGE_ID,
-					    new Object[] {
-					    stringValue(component,
-							new Long(maximum)),
-                                             MessageFactory.getLabel(context, component)}));
-		    }
+                             (context,
+                                  MAXIMUM_MESSAGE_ID,
+                                  new Object[]{
+                                       stringValue(component,
+                                            new Long(maximum)),
+                                       MessageFactory.getLabel(context, component)}));
+                    }
                 }
                 if (minimumSet &&
-                    (converted < minimum)) {
-		    if (maximumSet) {
+                     (converted < minimum)) {
+                    if (maximumSet) {
                         throw new ValidatorException(MessageFactory.getMessage
-					   (context,
-					    NOT_IN_RANGE_MESSAGE_ID,
-					    new Object[] {
-				            stringValue(component,
-							new Long(minimum)),
-					    stringValue(component,
-							new Long(maximum)),
-                                             MessageFactory.getLabel(context, component)}));
-			
-		    }
-		    else {
+                             (context,
+                                  NOT_IN_RANGE_MESSAGE_ID,
+                                  new Object[]{
+                                       stringValue(component,
+                                            new Long(minimum)),
+                                       stringValue(component,
+                                            new Long(maximum)),
+                                       MessageFactory.getLabel(context, component)}));
+
+                    } else {
                         throw new ValidatorException(MessageFactory.getMessage
-					   (context,
-					    MINIMUM_MESSAGE_ID,
-					    new Object[] {
-					    stringValue(component,
-							new Long(minimum)),
-                                             MessageFactory.getLabel(context, component)}));
-		    }
+                             (context,
+                                  MINIMUM_MESSAGE_ID,
+                                  new Object[]{
+                                       stringValue(component,
+                                            new Long(minimum)),
+                                       MessageFactory.getLabel(context, component)}));
+                    }
                 }
             } catch (NumberFormatException e) {
                 throw new ValidatorException(MessageFactory.getMessage
-                        (context, TYPE_MESSAGE_ID,
-                         new Object[] {MessageFactory.getLabel(context, component)} ));
+                     (context, TYPE_MESSAGE_ID,
+                          new Object[]{MessageFactory.getLabel(context, component)}));
             }
         }
 
@@ -318,14 +309,14 @@ public class LongRangeValidator implements Validator, StateHolder {
 
     public boolean equals(Object otherObj) {
 
-	if (!(otherObj instanceof LongRangeValidator)) {
-	    return false;
-	}
-	LongRangeValidator other = (LongRangeValidator) otherObj;
-	return ((maximum == other.maximum) &&
-                (minimum == other.minimum) &&
-		(maximumSet == other.maximumSet) &&
-                (minimumSet == other.minimumSet));
+        if (!(otherObj instanceof LongRangeValidator)) {
+            return false;
+        }
+        LongRangeValidator other = (LongRangeValidator) otherObj;
+        return ((maximum == other.maximum) &&
+             (minimum == other.minimum) &&
+             (maximumSet == other.maximumSet) &&
+             (minimumSet == other.minimumSet));
 
     }
 
@@ -333,13 +324,12 @@ public class LongRangeValidator implements Validator, StateHolder {
     public int hashCode() {
 
         int hashCode = new Long(minimum).hashCode()
-            + new Long(maximum).hashCode()
-            + Boolean.valueOf(minimumSet).hashCode()
-            + Boolean.valueOf(maximumSet).hashCode();
+             + new Long(maximum).hashCode()
+             + Boolean.valueOf(minimumSet).hashCode()
+             + Boolean.valueOf(maximumSet).hashCode();
         return (hashCode);
 
     }
-
 
     // --------------------------------------------------------- Private Methods
 
@@ -349,14 +339,13 @@ public class LongRangeValidator implements Validator, StateHolder {
      * <code>long</code>.</p>
      *
      * @param attributeValue The attribute value to be converted
-     *
      * @throws NumberFormatException if conversion is not possible
      */
     private long longValue(Object attributeValue)
-        throws NumberFormatException {
+         throws NumberFormatException {
 
         if (attributeValue instanceof Number) {
-            return ( ((Number) attributeValue).longValue() );
+            return (((Number) attributeValue).longValue());
         } else {
             return (Long.parseLong(attributeValue.toString()));
         }
@@ -364,18 +353,18 @@ public class LongRangeValidator implements Validator, StateHolder {
     }
 
     private String stringValue(UIComponent component, Long toConvert) {
-	String result = null;
-	Converter converter = null;
-	FacesContext context = FacesContext.getCurrentInstance();
+        String result = null;
+        Converter converter = null;
+        FacesContext context = FacesContext.getCurrentInstance();
 
-	converter = (Converter)
-	    context.getApplication().createConverter("javax.faces.Number");
-	result = converter.getAsString(context, component, toConvert);
-	return result;
+        converter = (Converter)
+             context.getApplication().createConverter("javax.faces.Number");
+        result = converter.getAsString(context, component, toConvert);
+        return result;
     }
 
     // ----------------------------------------------------- StateHolder Methods
-    
+
 
     public Object saveState(FacesContext context) {
 
